--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".counter.CounterActivity">
+    tools:context=".presentation.main.MainActivity">
 
     <TextView
         android:id="@+id/counter_text_view"
